--- a/package.json
+++ b/package.json
@@ -28,5 +28,8 @@
     "webpack": "^5.36.2",
     "webpack-cli": "^4.6.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "chart.js": "^3.7.1"
   }
 }
