--- a/.eslintrc
+++ b/.eslintrc
@@ -16,6 +16,7 @@
     "@typescript-eslint"
   ],
   "rules": {
+    "@typescript-eslint/no-non-null-assertion": "off",
     "linebreak-style": 0,
     "no-plusplus": "off",
     "no-console": "warn",
